JS: Fix layout when number of place inputs wraps. - Also, shrink inputs slightly to fit multiple on one phone screen.

--- a/static/editpages/css/covid.css
+++ b/static/editpages/css/covid.css
@@ -36,13 +36,22 @@
   margin-bottom: 2px;
 }
 
+.place-delete {
+  float: left;
+}
+
+.place-subcontainer {
+  width: calc(100% - 35px);
+  float: right;
+}
+
 .place-input, .place-input-label {
   display: inline-block;
   margin-right: 5px;
 }
 
 .place-input, .place-input-label-basic {
-  width: 150px;
+  width: 139px;
 }
 
 .place-alert {
